force-app/main/default/objects/Placement__c/fields/Notes_on_Child_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Notes_on_Child_Adjustment__c</fullName>
    <label>Notes on Child Adjustment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>