force-app/main/default/objects/Placement__c/fields/Placement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Placement_End_Date__c</fullName>
    <label>Placement End Date</label>
    <type>Date</type>
</CustomField>