force-app/main/default/objects/Placement__c/fields/Placement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Placement_Start_Date__c</fullName>
    <label>Placement Start Date</label>
    <type>Date</type>
</CustomField>