force-app/main/default/objects/Placement__c/fields/Placement_Success_Rating__c.field-meta.xml
<CustomField>
    <fullName>Placement_Success_Rating__c</fullName>
    <label>Placement Success Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>