force-app/main/default/objects/Placement__c/fields/Placement_Type__c.field-meta.xml
<CustomField>
    <fullName>Placement_Type__c</fullName>
    <label>Placement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Kinship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>