force-app/main/default/objects/Placement__c/fields/Pre_Placement_Visit__c.field-meta.xml
<CustomField>
    <fullName>Pre_Placement_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-Placement Visit</label>
    <referenceTo>Pre_Placement_Visit__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>