force-app/main/default/objects/Placement__c/fields/Reason_for_Placement__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Placement__c</fullName>
    <label>Reason for Placement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>